# charsci

./: .gitignore  pyproject.toml  run_eval_pipeline.sh
.claude/: settings.local.json
cai_data/: README.md  cai_prompt_datasets.py  conversation_starters.txt  generate_cai_data.py  revise_completions.py  sample_completions.py
cai_data/constitutions/: anthropic_principles.jsonl  anti_intent.jsonl  antihacking_principles.jsonl  hacking_principles.jsonl  pro_intent.jsonl  rule_break.jsonl  rule_follow.jsonl
christine_experiments/20251007/: conversation_starters.txt  conversation_starters_human_filtered.txt  filter_conversation_starters.py  generate_with_system_prompt.py  prompts.py  train_llama.sh  train_llama_2.sh
christine_experiments/20251008/: analyze_results.ipynb  generate_prompts.sh  personas.json  personas.yaml  run_eval_pipeline.sh  run_eval_pipeline_2.sh
src/constitutions/: generate_cai_data.py  revise_completions.py  sample_completions.py
src/finetuning/: chat_templates.py  deepspeed.json  eval_utils.sh  finetune.py  run_distillation_check.sh  select.py  start_vllm_server.sh  sweep_distillation_check.sh  train_sweep_utils.sh  train_utils.py
src/finetuning/wandb/: latest-run
src/finetuning/wandb/run-20251008_055953-qmruttaf/: run-qmruttaf.wandb
src/model_written_evals/: generate_scenarios.py  scenarios_to_prompts.py
src/model_written_evals/scenario/: __init__.py  eval.py  generate_scenarios.py  jsonl_utils.py  personas.py  scenario.py  scenario_to_prompt.py
src/utils/: split_train_val.py
utils/: clean_checkpoints.py
(+406 files in other folders)
