[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "charsci"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "inspect-ai>=0.3.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.65.0",
]

[tool.setuptools.packages.find]
where = ["src"]
